adl-frontend/src/test/resources/unit/error/semantic/attributes/attr2.adl
//#SemanticError GroupId=MADL ErrorId=INVALID_ATTRIBUTE_MISSING_TYPE line=5
// attribute declaration without type
primitive attributes.attr2 {
  // simple attribute name
  attribute attr_name1;
}
